[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/EnemySpawn.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Characters/Shield.png" type="Texture" id=2]
[ext_resource path="res://Audio/Transform2.ogg" type="AudioStream" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.109375, 0.723958, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.518182 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.506667, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 32.0
initial_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 7 )

[node name="EnemySpawn" type="Position2D"]
position = Vector2( 88, 80 )
script = ExtResource( 1 )

[node name="PartsSpawn" type="Particles2D" parent="."]
scale = Vector2( 2, 0.8 )
emitting = false
amount = 4
one_shot = true
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="PartsSpawn2" type="Particles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
process_material = SubResource( 8 )

[node name="SoundSpawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -18.0
